Modify QRB5165 Sample Code
Signed-off-by: Wanghao Wei <quic_wanghaow@quicinc.com>

--- a/Gstreamer-Applications/Makefile
+++ b/Gstreamer-Applications/Makefile
@@ -7,7 +7,9 @@ SUBDIRS = \
 	gst_encode_decode \
 	gst_gui_app \
 	gst_streaming \
-	gst_transform
+	gst_transform \
+	gst_alsa/src \
+	gst_tflite/src
 
 .PHONY: all clean
 
