Modify gst_alsa sample code
Signed-off-by: Wanghao Wei <quic_wanghaow@quicinc.com>

--- a/Gstreamer-Applications/gst_alsa/HWConfig/qc-alsa-restore.service
+++ b/Gstreamer-Applications/gst_alsa/HWConfig/qc-alsa-restore.service
@@ -8,7 +8,7 @@ Description=QC ALSA restore Service
 After=init_audio.service
 
 [Service]
-Type=notify
+Type=idle
 ExecStartPre=/bin/sleep 10s
 ExecStart=/usr/bin/qc_alsa_restore.sh
 Restart=on-failure
